--- a/pages/components/template1/css/PropertyPriceTable.module.css
+++ b/pages/components/template1/css/PropertyPriceTable.module.css
@@ -15,9 +15,11 @@
     letter-spacing: 1.2px;
     text-transform: capitalize;
 }
-
+.noWrap {
+    white-space: nowrap;
+}
 .priceTable {
-    width: 100%;
+    /* width: 100%; */
     border-collapse: collapse;
     margin: 0 -15px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -60,7 +62,7 @@
 
 @media (max-width: 480px) {
     .priceTable{
-        width: 90%;
+        /* width: 90%; */
         border-collapse: collapse;
         margin: 0 -10px 0;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
