--- a/pages/components/template1/css/PropertyPriceTable.module.css
+++ b/pages/components/template1/css/PropertyPriceTable.module.css
@@ -19,9 +19,9 @@
     white-space: nowrap;
 }
 .priceTable {
-    /* width: 100%; */
+    width: 100%;
     border-collapse: collapse;
-    margin: 0 -15px 0;
+    /* margin: 0 -15px 0; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -62,9 +62,9 @@
 
 @media (max-width: 480px) {
     .priceTable{
-        /* width: 90%; */
+        width: 100%;
         border-collapse: collapse;
-        margin: 0 -10px 0;
+        /* margin: 0 -10px 0; */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     .priceTable th,
