--- a/pages/components/template1/css/Blogs.module.css
+++ b/pages/components/template1/css/Blogs.module.css
@@ -47,12 +47,21 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
-.blogImage {
+/* .blogImage {
   width: 100%;
   height: 200px;
   object-fit: cover;
   border-bottom: 2px solid #007bff; /* Accent border for better separation */
+
+
+
+.blogImage {
+  width: 350px;
+  height: 200px; /* Fixed height */
+  object-fit: cover; /* Ensures the image covers the area without stretching */
+  border-bottom: 2px solid #007bff; /* Accent border for better separation */
 }
+
 
 .blogContent {
   padding: 15px;
