--- a/pages/components/template1/css/HeroBanner.module.css
+++ b/pages/components/template1/css/HeroBanner.module.css
@@ -1,5 +1,5 @@
 .heroBanner {
-  height: 60vh;
+  height: 90vh;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -13,6 +13,12 @@
   overflow: hidden;
 }
 
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+  .heroBanner {
+    height: 60vh;
+  }
+}
 .heroContent {
   display: flex;
   flex-direction: row;
