--- a/pages/components/template1/css/Footer.module.css
+++ b/pages/components/template1/css/Footer.module.css
@@ -46,6 +46,7 @@
 .footerLogo img {
   max-width: 150px; /* Adjust size as needed */
   height: auto;
+  border-radius: 10px;
 }
 
 .footerAgentRera {
