--- a/pages/components/template1/css/Header.module.css
+++ b/pages/components/template1/css/Header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  /* padding: 10px 10px; */
   background-color: #ffffff; /* White background */
   color: #000000;
   position: sticky;
@@ -16,7 +16,8 @@
 }
 
 .logo {
-  max-width: 120px;
+  padding-left: 10px;
+  max-width: 160px;
   margin-left: 30px;
   height: auto;
 }
