--- a/pages/components/template1/css/Services.module.css
+++ b/pages/components/template1/css/Services.module.css
@@ -4,29 +4,34 @@
   align-items: center;
   padding: 20px;
   flex-wrap: wrap; /* Ensures items wrap on smaller screens */
-  /* height: 300px; */
 }
 
 .template1Card {
-  background-color: #f5f5f5;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px;
   text-align: center;
   height: 150px;
   width: 100%; /* Full width on small screens */
   max-width: 400px; /* Limits the width on larger screens */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 10px; /* Adds space between cards */
+  background-color: rgba(255, 255, 255, 0.7); /* Transparent background */
 }
 
 .template1Card h3 {
   margin-top: 10px;
   font-size: 1.2em;
+  color: #333;
+}
+
+.template1Card h6 {
+  color: #555;
+  font-size: 0.9em;
 }
 
 .template1Card p {
   margin-top: 10px;
-  color: #555;
+  color: #777;
 }
 
 .template1Icon {
@@ -35,15 +40,26 @@
 
 /* Specific background colors for cards */
 .template1BusinessStrategy {
-  background-color: #d8eae0;
+  border: 2px solid #d8eae0;
 }
 
 .template1LocalMarketing {
-  background-color: #e0efff;
+  border: 2px solid #e0efff;
 }
 
-.template1SocialMedia {
-  background-color: #fff2e6;
+.template1PropertyDetails {
+  border: 2px solid #fff2e6;
+}
+
+.propertyDetailsContent img {
+  margin-bottom: 10px;
+}
+
+.updatedText {
+  font-size: 0.85em;
+  color: #888;
+  margin-top: 5px;
+  font-style: italic;
 }
 
 /* Mobile responsiveness */
