--- a/pages/components/template1/css/ContactUs.module.css
+++ b/pages/components/template1/css/ContactUs.module.css
@@ -118,3 +118,48 @@
     margin-bottom: 10px;
     font-weight: bold; /* Emphasize error message */
 }
+
+
+
+.thankYouPopup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .thankYouContent {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+  }
+  
+  .thankYouContent h2 {
+    margin-bottom: 10px;
+  }
+  
+  .thankYouContent p {
+    margin-bottom: 20px;
+  }
+  
+  .thankYouContent button {
+    padding: 10px 20px;
+    background: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .thankYouContent button:hover {
+    background: #0056b3;
+  }
+  
