--- a/pages/components/template1/css/Blogs.module.css
+++ b/pages/components/template1/css/Blogs.module.css
@@ -33,7 +33,8 @@
 }
 
 .blogCard {
-  min-width: 300px;
+  width: 400px;
+  height: 500px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
@@ -56,7 +57,7 @@
 
 
 .blogImage {
-  width: 350px;
+  width: 400px;
   height: 200px; /* Fixed height */
   object-fit: cover; /* Ensures the image covers the area without stretching */
   border-bottom: 2px solid #007bff; /* Accent border for better separation */
